# simple-api-data-extractor

./: .gitignore  Cargo.toml  README.md
deployment/: Dockerfile
deployment/helm/: values.yaml
deployment/helm/app/: deployment.yaml
src/: aggregator.rs  config.rs  main.rs  s3.rs  scheduler.rs
src/coingecko/: client.rs  mod.rs  models.rs
src/coinmarketcap/: client.rs  mod.rs  models.rs  routes.rs
src/storage/: mod.rs  s3.rs
src/tests/: integration_tests.rs
tests/: integration_tests.rs
