[package]
name = "simple_api_data_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
thiserror = "1.0"
env_logger = "0.9"
rusoto_core = "0.46.0"
rusoto_s3 = "0.46.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "0.31.0"
